# rustmerge

./: Cargo.toml  README.md  issue.md  test.rs
src/: main.rs  test.rs
