[package]
name = "rustmerge"
version = "0.1.0"
authors = ["b3hr4d <b3hr4d@live.com>"]
edition = "2021"
description = "A Cargo subcommand that merges all Rust source files in a package into a single file."
readme = "README.md"
repository = "https://github.com/b3hr4d/rustmerge"
license = "MIT"
keywords = ["cargo", "subcommand", "merge", "rust", "combine"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-rustmerge"
path = "src/main.rs"

[dependencies]
toml = "0.8"

[dev-dependencies]
tempfile = "3.13"
